syntax = "proto3";

option csharp_namespace = "GrpcClient";

import "google/protobuf/empty.proto";

service ChatMessagesStreaming {
  rpc ChatMessagesStreaming (google.protobuf.Empty) returns (stream ReceivedMessage);
}

message ReceivedMessage{
  string user = 1;
  string time = 2;
  bytes message = 3;
  string filename = 4;
}